--- a/upload.css
+++ b/upload.css
@@ -157,3 +157,16 @@ footer.curved-menu nav.menu ul li a:hover {
 }
 
 /* Add styles for the confirmation message */
+.confirmation-message {
+    display: none;
+    position: fixed;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #ffffff;
+    color: rgb(0, 0, 0);
+    padding: 10px 20px;
+    border: 2px solid #000;
+    border-radius: 5px;
+    z-index: 1000;
+}
